[package]
name = "sandstorm-collections-app"
version = "1.3.0"
authors = ["David Renshaw <david@sandstorm.io>"]
build = "build.rs"
edition = "2018"

[[bin]]

name = "server"
path = "src/main.rs"

[build-dependencies]
capnpc = "0.18"

[dependencies]
futures = "0.3.28"
capnp = "0.18"
capnp-rpc = "0.18"
hex = "0.4.3"
base64 = "0.21.3"
url = "1.2"
sandstorm = "0.0.19"
tokio = { version = "0.2.6", features = ["net", "rt-util", "time", "uds"]}
tokio-util = { version = "0.3.0", features = ["compat"] }
multipoll = { git = "https://github.com/dwrensha/multipoll" }
